feat: Improve what is partition case study